# TranslatorRocqLean

./: Dockerfile  README.md  pyproject.toml
slurm/: accelerate_config.yaml  config.json  dcp2hf.slurm  grpo_singularity_multi_node.slurm  grpo_singularity_single_node.slurm  singularity_multi_trl.sh  singularity_multi_vllm.sh  train.slurm  train_specialization.slurm
trl_llm/: __main__.py  cli.py
trl_llm/data/: base.py  dataloaders.py  iterable.py  visual.py  visual_prompt.json
trl_llm/eval/: compile_visual_prompt.py  evaluate.py  utils.py
trl_llm/gradio/: config.py  core.py  main.py
trl_llm/train/: config.py  dcp_to_hf.py  grpo.py  trainer.py  utils.py
